[package]
name = "ranager"
description = "A project manager written in rust."
repository = "https://github.com/recleun/ranager"
documentation = "https://docs.rs/ranager"
readme = "README.md"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
